exercise1/thin/testing02static/slurm-413071.out
mkdir -p obj
mpicc -O3 -fopenmp -march=native -g -Iinclude -c src/read_write_pgm.c -o obj/read_write_pgm.o
src/read_write_pgm.c: In function ‘parallel_write_pgm_image’:
src/read_write_pgm.c:218:24: error: ‘fname’ undeclared (first use in this function); did you mean ‘tzname’?
  218 |     FILE *file = fopen(fname, "rb");
      |                        ^~~~~
      |                        tzname
src/read_write_pgm.c:218:24: note: each undeclared identifier is reported only once for each function it appears in
src/read_write_pgm.c:222:16: warning: ‘return’ with a value, in function returning void
  222 |         return -1;
      |                ^
src/read_write_pgm.c:205:6: note: declared here
  205 | void parallel_write_pgm_image(void *image, int maxval, int xsize, int my_chunk, const char *image_name, int offset)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:21: obj/read_write_pgm.o] Error 1
Playground reading for starting.pgm:
0 1 1 0 
0 1 1 1 
0 0 1 1 
0 0 0 0 
Processor 0:
0 1 1 0 
0 1 1 1 
0 0 1 1 
0 0 0 0 
